--- a/pom.xml
+++ b/pom.xml
@@ -183,7 +183,12 @@
 			<artifactId>jackson-jaxrs-base</artifactId>
 			<version>2.6.3</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.9</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<finalName>OcurSpotter</finalName>
